--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,19 +30,42 @@ jobs:
           filename: metrics.terminal.svg
           token: ${{ secrets.METRICS_TOKEN }}
           committer_token: ${{ secrets.GITHUB_TOKEN }}
-          base: ""
-          plugin_habits: yes
-          plugin_habits_from: 200
-          plugin_habits_facts: no
-          plugin_habits_charts: yes
+         
+          
+      - name: 🦑 Personal metrics (language)
+        if: ${{ success() || failure() }}
+        uses: lowlighter/metrics@latest
+        with:
+          filename: metrics.language.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
           plugin_languages: yes
-          plugin_languages_ignored: less, dockerfile, makefile, qmake, lex, cmake, shell, gnuplot, vue, scala
-          plugin_languages_skipped: lowlighter
+          plugin_languages_ignored: html, css, less, dockerfile, makefile, qmake, lex, cmake, shell, gnuplot, vue, scala
           plugin_languages_details: bytes-size, percentage
-          plugin_stargazers: yes
-          plugin_stars: yes
-          plugin_stars_limit: 3
           config_timezone: Canada/Montreal
-          config_order: languages, pagespeed, habits, stargazers, stars
+          
+      - name: 🦑 Personal metrics (webpage)
+        if: ${{ success() || failure() }}
+        uses: lowlighter/metrics@latest
+        with:  
+          filename: metrics.webpage.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          plugin_pagespeed: yes
+          plugin_pagespeed_token: ${{ secrets.PAGESPEED_TOKEN }} # Optional but recommended
+          plugin_pagespeed_detailed: yes                         # Print detailed audit metrics
+          plugin_pagespeed_screenshot: yes                        # Display a screenshot of your website
+          plugin_pagespeed_url: .user.website                    # Website to audit (defaults to your GitHub linked website)
 
+      - name: 🦑 Personal metrics (plugin)
+        if: ${{ success() || failure() }}
+        uses: lowlighter/metrics@latest
+        with:  
+          filename: metrics.plugin.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          plugin_topics: yes
+          plugin_topics_sort: stars    # Sort by most starred topics
+          plugin_topics_mode: mastered # Display icons instead of labels
+          plugin_topics_limit: 0       # Disable limitations
      
