--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,24 @@ jobs:
           base: header, repositories
           plugin_lines: yes
           plugin_isocalendar: yes
-          config_order: base.header, isocalendar, base.repositories
+          
+          plugin_topics: yes
+          plugin_topics_sort: stars    # Sort by most starred topics
+          plugin_topics_mode: mastered # Display icons instead of labels
+          plugin_topics_limit: 0       # Disable limitations
+          
+          plugin_languages: yes
+          plugin_languages_ignored: html, css, less, dockerfile, makefile, qmake, lex, cmake, shell, gnuplot, vue, scala
+          plugin_languages_details: bytes-size, percentage
+          config_timezone: Canada/Montreal
+          
+          plugin_pagespeed: yes
+          plugin_pagespeed_token: ${{ secrets.PAGESPEED_TOKEN }} # Optional but recommended
+          plugin_pagespeed_detailed: yes                         # Print detailed audit metrics
+          plugin_pagespeed_screenshot: no                        # Display a screenshot of your website
+          plugin_pagespeed_url: .user.website                    # Website to audit (defaults to your GitHub linked website)
+          
+          config_order: base.header, isocalendar, base.repositories, topics, language, pagespeed
           
       - name: 🦑 Personal metrics (additional)
         if: ${{ success() || failure() }}
@@ -33,42 +50,7 @@ jobs:
           user: bestbonbai
           base: header, repositories
           config_timezone: Canada/Montreal
-         
+          config_order: base.header, base.repositories
           
-      - name: 🦑 Personal metrics (language)
-        if: ${{ success() || failure() }}
-        uses: lowlighter/metrics@latest
-        with:
-          filename: metrics.language.svg
-          token: ${{ secrets.METRICS_TOKEN }}
-          committer_token: ${{ secrets.GITHUB_TOKEN }}
-          plugin_languages: yes
-          plugin_languages_ignored: html, css, less, dockerfile, makefile, qmake, lex, cmake, shell, gnuplot, vue, scala
-          plugin_languages_details: bytes-size, percentage
-          config_timezone: Canada/Montreal
-          
-      - name: 🦑 Personal metrics (webpage)
-        if: ${{ success() || failure() }}
-        uses: lowlighter/metrics@latest
-        with:  
-          filename: metrics.webpage.svg
-          token: ${{ secrets.METRICS_TOKEN }}
-          committer_token: ${{ secrets.GITHUB_TOKEN }}
-          plugin_pagespeed: yes
-          plugin_pagespeed_token: ${{ secrets.PAGESPEED_TOKEN }} # Optional but recommended
-          plugin_pagespeed_detailed: yes                         # Print detailed audit metrics
-          plugin_pagespeed_screenshot: yes                        # Display a screenshot of your website
-          plugin_pagespeed_url: .user.website                    # Website to audit (defaults to your GitHub linked website)
-
-      - name: 🦑 Personal metrics (plugin)
-        if: ${{ success() || failure() }}
-        uses: lowlighter/metrics@latest
-        with:  
-          filename: metrics.plugin.svg
-          token: ${{ secrets.METRICS_TOKEN }}
-          committer_token: ${{ secrets.GITHUB_TOKEN }}
-          plugin_topics: yes
-          plugin_topics_sort: stars    # Sort by most starred topics
-          plugin_topics_mode: mastered # Display icons instead of labels
-          plugin_topics_limit: 0       # Disable limitations
+     
      
