--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
           plugin_languages_details: bytes-size, percentage
           config_timezone: Canada/Montreal
           
-          plugin_pagespeed: yes
+          plugin_pagespeed: no
           plugin_pagespeed_token: ${{ secrets.PAGESPEED_TOKEN }} # Optional but recommended
           plugin_pagespeed_detailed: yes                         # Print detailed audit metrics
           plugin_pagespeed_screenshot: no                        # Display a screenshot of your website
